# image-converter

./: Cargo.toml  dist-workspace.toml  todo.md
assets/icons/: icon.icns
src/: app.rs  convert.rs  convert_view.rs  main.rs  settings.rs  things.rs
wix/: main.wxs
