[package]
name = "ImageConverter"
description = "It bulk converts your images on YOUR device"
authors = ["Tiew <tnttiew@gmail.com>"]
repository = "https://github.com/Tiew-S/image-converter"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
# Optional, for default bundled assets
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1.0"
dark-light = "2.0.0"
image = "0.25.10"
pdfium-bind = "0.1.0"
rfd = "0.17.2"
rayon = "1.12.0"
parking_lot = "0.12.5"
tokio = {version="1.52.3", features=["sync"]}
confy = "2.0.0"
serde_derive = "1.0.228"
serde = "1.0.228"
regex = "1.12.4"
open = "5.3.5"
resvg = "0.47.0"

[package.metadata.bundle]
name = "ImageConverter"
identifier = "com.tiews.imageconverter"
icon = ["assets/icon.png", "assets/icon.ico"]
resources = []
